<resources>
    <string name="app_name">MobileVideoPlayer</string>
    <string name="url_source">URL source</string>
    <string name="todo">TODO</string>
    <string name="no_file_selected">No file selected</string>
    <string name="info">info</string>
    <string name="gestures">Gestures</string>
    <string name="swipe_left_back_15s">-Swipe left: back 15s</string>
    <string name="swipe_right_forward_15s">-Swipe right: forward 15s</string>
    <string name="swipe_up_volume_up">-Swipe up: volume up</string>
    <string name="swipe_down_volume_down">-Swipe down: volume down</string>
    <string name="put_the_phone_facing_down_on_a_surface_to_pause_the_video">-Put the phone facing down on a surface to pause the video</string>
    <string name="double_tap_to_play_pause">-Double tap to play/pause</string>
    <string name="description">description</string>
</resources>
